# python-sdk

./: README.md  pyproject.toml
examples/: gsm8k_server.py  test_client.py
src/ors/: __init__.py  _log.py  _reconnect.py  _utils.py  _version.py  environment.py  server.py  toolset.py  types.py
src/ors/client/: __init__.py  _http.py  _ping.py  _session.py  _types.py  client.py  environment.py  session.py
tests/: conftest.py  test_environment.py  test_server.py  test_types.py
