[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ors-sdk"
dynamic = ["version"]
description = "Python SDK for the Open Reward Standard (ORS) - an HTTP protocol for connecting AI agents to RL environments"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "ORS Contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["rl", "reinforcement-learning", "ai", "agents", "environments", "ors"]

dependencies = [
    "aiohttp>=3.8",
    "fastapi>=0.100",
    "pydantic>=2.0",
    "structlog>=23.0",
    "sse-starlette>=1.0",
    "tenacity>=8.0",
    "typing_extensions>=4.0",
    "uvicorn>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://openrewardstandard.io"
Repository = "https://github.com/openrewardstandard/python-sdk/"
Documentation = "https://openrewardstandard.io"

[tool.hatch.version]
path = "src/ors/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ors"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
